<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.george.firstproject.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sId"
                android:id="@+id/textView"
                android:textSize="@dimen/TextViewSize"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/IdText"
                android:layout_weight="1"
                android:singleLine="true"
                android:hint="@string/idHint"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sName"
                android:id="@+id/textView2"
                android:textSize="@dimen/TextViewSize" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameText"
                android:layout_weight="1"
                android:singleLine="true"
                android:hint="@string/nameHint" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.03">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:id="@+id/textView3"
                android:textSize="@dimen/TextViewSize" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radioGroup"
                    android:weightSum="1"
                    android:checkedButton="@+id/radioMale">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/male"
                        android:id="@+id/radioMale"
                        android:layout_weight="0.17"
                        android:textSize="@dimen/TextViewSize" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/female"
                        android:id="@+id/radioFemale"
                        android:textSize="@dimen/TextViewSize" />

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/birthday"
                android:gravity="center_vertical"
                android:id="@+id/textView4"
                android:textSize="@dimen/TextViewSize" />

            <DatePicker
                style="@android:style/Widget.DatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textView5"
                android:textSize="@dimen/TextViewSize" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailText"
                android:layout_weight="1"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:text="@string/home"
                android:id="@+id/textView6"
                android:textSize="@dimen/TextViewSize" />

            <Spinner
                android:layout_width="83dp"
                android:layout_height="match_parent"
                android:id="@+id/provinceSpinner"
                android:gravity="center_vertical"
                android:spinnerMode="dialog"
                android:entries="@array/provinces"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/province"
                android:id="@+id/textView7"
                android:gravity="center_vertical"
                android:textSize="@dimen/TextViewSize" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/locationText"
                android:layout_weight="1"
                android:hint="@string/locationHint"
                android:singleLine="true" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.46">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submitButton"
                android:layout_marginStart="36dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancelButton"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="38dp" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
